move legend up to avoid it being hidden by chrome link's tooltip

--- a/htdocs/photoalbum.css
+++ b/htdocs/photoalbum.css
@@ -174,7 +174,7 @@ div#overlaytopright {
 
 div#overlaybottom {
     position:absolute;
-    bottom:0;
+    bottom: 1em;
     background: #161616;
     opacity: 0.9;
 }
